   * hdfs_scratch_dir
   * num_ec2_core_instances
   * num_ec2_task_instances
   * pool_emr_job_flows
   * s3_log_uri
   * s3_scratch_uri
   * s3_tmp_dir
   * s3_sync_wait_time
   * s3_upload_part_size
   * ssh_tunnel_to_job_tracker
 * removed deprecated runner methods:
   * get_job_name()
   * EMRJobRunner:
     * get_ami_version()
     * get_emr_job_flow_id()
     * make_persistent_job_flow()
 * removed OptionStore classes and MRJobRunner.OPTION_STORE_CLASS
 * removed deprecated passthrough to runner.fs
 * removed deprecated switches:
   * --partitioner
 * removed deprecated JOB_FLOW and *SCRATCH cleanup types

v0.5.10, 2017-05-12 -- loose ends
 * JSON protcols use rapidjson if ujson unavailable (#1579)
   * can also explicitly use RapidJSONProtocol, RapidJSONValueProtocol
 * EMR runner:
   * aws_security_token option renamed to aws_session_token (#1536)
 * EMR and Dataproc runners:
   * bootstrapping mrjob no longer stalls if mrjob already installed (#1567)
   * master bootstrap script has correct extension: .sh, not .py (#1504)

v0.5.9, 2017-03-20 -- Docker hooks
 * fixes which affect Docker:
   * task_python_bin option, used by tasks but not setup script (#1394)
   * local mode references mrjob/cat.py by relative path, not absolute (#1540)
 * EMR runner
   * re-launch SSH tunnel when cluster pooling auto-recovers (#1549)
   * get job progress using `ssh curl` when tunnel is unavailable (#1547)
   * work around `sh -e` setup script bug on AMI 5.2.0+ (#1548)
   * renamed emr_applications option to "applications" (#1420)
 * small fix to terminate-idle-cluster command's S3 "locking" code (#1545)

v0.5.8, 2017-02-01 -- upload_dirs, pre-filters
 * automatically tarball and upload directories with --dir, setup hooks (#23)
 * specify path for inter-step output with --step-output-dir #263
 * jobs:
   * better --help printout
   * deprecated option groups in MRJobs
   * deprecated MRJob.get_all_option_groups()