@@ -393,58 +393,3 @@ class StdStreamTestCase(TestCase):
         self.assertEqual(launcher.stdin, mock_stdin.buffer)
         self.assertEqual(launcher.stdout, mock_stdout)
         self.assertEqual(launcher.stderr, mock_stderr)
-
-
-class JobRunnerKwargsTestCase(TestCase):
-    # ensure that switches exist for every option passed to runners
-
-    NON_OPTION_KWARGS = set([
-        'conf_paths',
-        'extra_args',
-        'file_upload_args',
-        'hadoop_input_format',
-        'hadoop_output_format',
-        'input_paths',
-        'mr_job_script',
-        'output_dir',
-        'partitioner',
-        'sort_values',
-        'stdin',
-        'step_output_dir',
-    ])
-
-    CONF_ONLY_OPTIONS = set([
-        'aws_access_key_id',
-        'aws_secret_access_key',
-        'aws_session_token',
-        'local_tmp_dir',
-    ])
-
-    def _test_job_runner_kwargs(self, runner_class, conf_only_options=()):
-        launcher = MRJobLauncher(args=['/path/to/script'])
-
-        method_name = '%s_job_runner_kwargs' % runner_class.alias
-        kwargs = getattr(launcher, method_name)()
-
-        option_names = set(kwargs) - self.NON_OPTION_KWARGS
-
-        self.assertEqual(
-            option_names,
-            (runner_class.OPT_NAMES -
-             self.CONF_ONLY_OPTIONS)
-        )
-
-    def test_dataproc(self):
-        self._test_job_runner_kwargs(DataprocJobRunner)
-
-    def test_emr(self):
-        self._test_job_runner_kwargs(EMRJobRunner)
-
-    def test_hadoop(self):
-        self._test_job_runner_kwargs(HadoopJobRunner)
-
-    def test_inline(self):
-        self._test_job_runner_kwargs(InlineMRJobRunner)
-
-    def test_local(self):
-        self._test_job_runner_kwargs(LocalMRJobRunner)
